Installer is running but patcher is having issues with the hash.